--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <header>
             <div class="mainmenu">
             <h1 class="logo">
-                <a href="/main-index.html"><img src="img/images/sub3_04.png" alt="header logo"></img></a>
+                <a href="https://taewoong-yeo.github.io/visit-busan/main-index.html"><img src="img/images/sub3_04.png" alt="header logo"></img></a>
             </h1>
             <div class="dropbox"></div>
             <nav>
@@ -161,7 +161,7 @@
 
     <!-- -----------스크롤 네이브 부분-------- -->
     <nav id="s-nav">
-        <h1 class="s-logo"><a href="/main-index.html"><img src="img/scrollnav_03.png" alt="비짓부산 로고"></a></h1>
+        <h1 class="s-logo"><a href="https://taewoong-yeo.github.io/visit-busan/main-index.html"><img src="img/scrollnav_03.png" alt="비짓부산 로고"></a></h1>
         <ul class="s-gnb">
             <li class="s-main"><a href="#">부산에 가면</a>
                 <ul class="s-sub">
